<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<artifactId>uniprot-rest-api</artifactId>
		<groupId>org.uniprot</groupId>
		<version>1.0.23-SNAPSHOT</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>

	<artifactId>statistics-rest</artifactId>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<slf4j.version>1.7.25</slf4j.version>
		<logback.version>1.2.3</logback.version>
		<jayway.version>2.4.0</jayway.version>
		<javax.mail.version>1.6.2</javax.mail.version>
	</properties>

	<dependencies>
		<!-- uniprot dependencies -->
		<dependency>
			<groupId>org.uniprot</groupId>
			<artifactId>common-rest</artifactId>
			<version>${project.parent.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.solr</groupId>
					<artifactId>solr-solrj</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.solr</groupId>
					<artifactId>solr-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.uniprot</groupId>
			<artifactId>core-domain</artifactId>
			<version>${project.parent.version}</version>
		</dependency>
		<dependency>
			<groupId>org.uniprot</groupId>
			<artifactId>common-rest</artifactId>
			<version>${project.parent.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.solr</groupId>
					<artifactId>solr-solrj</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.solr</groupId>
					<artifactId>solr-core</artifactId>
				</exclusion>
			</exclusions>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>

		<!-- spring dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>


		<!-- Tests -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.vaadin.external.google</groupId>
					<artifactId>android-json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.uniprot</groupId>
			<artifactId>uniprot-indexer-integration-test</artifactId>
			<version>${uniprot-store.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.uniprot</groupId>
			<artifactId>json-parser</artifactId>
			<version>${uniprot-core.version}</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- allows executable jar with embedded jetty to be created through, 
				"mvn package" command -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>repackage</id>
						<configuration>
							<classifier>exec</classifier>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven-dependency-plugin.version}</version>
				<executions>
					<execution>
						<id>unpack-dependencies</id>
						<phase>generate-test-resources</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>org.uniprot</groupId>
									<artifactId>uniprot-index-config</artifactId>
									<version>${uniprot-store.version}</version>
									<type>tar.gz</type>
									<overWrite>true</overWrite>
									<outputDirectory>${project.build.directory}/test-classes</outputDirectory>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>openapi</id>
			<build>
				<plugins>
					<plugin>
						<groupId>uk.ac.ebi.uniprot</groupId>
						<artifactId>openapi-maven-plugin</artifactId>
						<version>${openapi-maven-plugin.version}</version>
						<configuration>
							<packageLocations>
								<packageLocation>org.uniprot.api.help.centre.controller</packageLocation>
							</packageLocations>
							<openApiDirectory>target/generated-sources/swagger</openApiDirectory>
							<openApiFileName>help-centre-openapi3.yaml</openApiFileName>
							<serverBaseUrl>http://wwwdev.ebi.ac.uk/uniprot/api</serverBaseUrl>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>org.uniprot</groupId>
								<artifactId>uniprot-config</artifactId>
								<version>${uniprot-store.version}</version>
								<exclusions>
									<exclusion>
										<groupId>com.fasterxml.jackson.core</groupId>
										<artifactId>*</artifactId>
									</exclusion>
								</exclusions>
							</dependency>
						</dependencies>
						<executions>
							<execution>
								<phase>compile</phase>
								<goals>
									<goal>oas-generate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>